✅ Better Language management

--- a/Extension/_locales/da/messages.json
+++ b/Extension/_locales/da/messages.json
@@ -1,5 +1,1 @@
-{
-  "description": {
-    "message": "PreMiD tilføjer Discord Rich Presence integration, mediekontrol og meget mere til YouTube/YouTube Musik, Twitch etc..."
-  }
-}
+{"description":{"message":"PreMiD tilføjer Discord Rich Presence integration, mediekontrol og meget mere til YouTube/YouTube Musik, Twitch etc..."}}
