--- a/Extension/_locales/de/messages.json
+++ b/Extension/_locales/de/messages.json
@@ -1,5 +1,1 @@
-{
-  "description": {
-    "message": "PreMiD fügt Discord-Rich-Presence-Integration, Medienkontrolle und vieles mehr zu YouTube/YouTube Music, Twitch etc. hinzu..."
-  }
-}
+{"description":{"message":"PreMiD fügt Discord-Rich-Presence-Integration, Medienkontrolle und vieles mehr zu YouTube/YouTube Music, Twitch etc. hinzu..."}}
