--- a/Extension/_locales/es/messages.json
+++ b/Extension/_locales/es/messages.json
@@ -1,5 +1,1 @@
-{
-  "description": {
-    "message": "PreMiD agrega integración de Presencia rica de discord, Controles Multimedia y mucho mas a Youtube/Youtube Music, Twitch etc..."
-  }
-}
+{"description":{"message":"PreMiD agrega integración de Presencia rica de discord, Controles Multimedia y mucho mas a Youtube/Youtube Music, Twitch etc..."}}
