--- a/Extension/languages/la.json
+++ b/Extension/languages/la.json
@@ -1,33 +1,1 @@
-{
-    "tab.installed.heading": "Gratias ago YT Presence instruere",
-    "tab.installed.subHeading.didInstallQuestion": "Iamne usum instruxisti",
-    "tab.installed.subHeading.notInstalled": "Nonne est? Obtempera ii gradi",
-    "tab.installed.instructions.download": "Instruere suprema forma a $1",
-    "tab.installed.instructions.github": "GitHub logium meum",
-    "tab.installed.instructions.wait": "Aperi instruens et exspecta dum instruxit",
-    "tab.installed.instructions.warnings": "Admonitum super FireWall et SmartScreen accipere potes (Virus non est, promitto)",
-    "tab.installed.instructions.autostart": "Usus statim incipere debet, id per optutu ad regula initii (Windows et MacOS) tua examinare potes",
-    "tab.installed.subHeading.ready": "Enimne? Incohare potes!",
-    "tab.installed.intro": "Incipe per video spectante in YouTube, per streamer amari spectante in Twitch, fortasse etiam Netflix... quis scit? Aut carmina optima in SoundCloud et YouTube Music audis.",
-    "tab.updated.heading": "PreMiD corrigam est!",
-    "tab.updated.subHeading.whatsNew": "Quid nove est?",
-    "tab.updated.subHeading.whatChanged": "Quid mutatum est?",
-    "presence.playback.playing": "Canens rursus",
-    "presence.playback.paused": "Canens rursus intermissum",
-    "popup.tabs.options": "Investitura",
-    "popup.tabs.credits": "Quis id facit",
-    "popup.options.headings.general": "Communis",
-    "popup.options.headings.presences": "Salus",
-    "popup.options.enabled": "Activus",
-    "popup.options.titleMenubar": "Indicium",
-    "popup.options.mediaControls": "Media gubernatio",
-    "popup.options.checkForUpdates": "Quaerens correctiones",
-    "popup.options.darkTheme": "Niger",
-    "popup.options.systemStartup": "Incipens ad disciplina initium",
-    "presence.episode": "Series",
-    "presence.browsing": "Inquirens...",
-    "presence.watching": "spectat",
-    "tab.installed.letsStart": "Initium!",
-    "tab.installed.getSupport": "Auxilium nancisci",
-    "tab.installed.likeThisProject": "Id amas? Largi 1$!"
-}
+{"tab.installed.heading":"Gratias ago YT Presence instruere","tab.installed.subHeading.didInstallQuestion":"Iamne usum instruxisti","tab.installed.subHeading.notInstalled":"Nonne est? Obtempera ii gradi","tab.installed.instructions.download":"Instruere suprema forma a $1","tab.installed.instructions.github":"GitHub logium meum","tab.installed.instructions.wait":"Aperi instruens et exspecta dum instruxit","tab.installed.instructions.warnings":"Admonitum super FireWall et SmartScreen accipere potes (Virus non est, promitto)","tab.installed.instructions.autostart":"Usus statim incipere debet, id per optutu ad regula initii (Windows et MacOS) tua examinare potes","tab.installed.subHeading.ready":"Enimne? Incohare potes!","tab.installed.intro":"Incipe per video spectante in YouTube, per streamer amari spectante in Twitch, fortasse etiam Netflix... quis scit? Aut carmina optima in SoundCloud et YouTube Music audis.","tab.updated.heading":"PreMiD corrigam est!","tab.updated.subHeading.whatsNew":"Quid nove est?","tab.updated.subHeading.whatChanged":"Quid mutatum est?","presence.playback.playing":"Canens rursus","presence.playback.paused":"Canens rursus intermissum","popup.tabs.options":"Investitura","popup.tabs.credits":"Quis id facit","popup.options.headings.general":"Communis","popup.options.headings.presences":"Salus","popup.options.enabled":"Activus","popup.options.titleMenubar":"Indicium","popup.options.mediaControls":"Media gubernatio","popup.options.checkForUpdates":"Quaerens correctiones","popup.options.darkTheme":"Niger","popup.options.systemStartup":"Incipens ad disciplina initium","presence.episode":"Series","presence.browsing":"Inquirens...","presence.watching":"spectat","tab.installed.letsStart":"Initium!","tab.installed.getSupport":"Auxilium nancisci","tab.installed.likeThisProject":"Id amas? Largi {{github_link}}!","tab.updated.gotIt":"","extension.description":"","popup.options.connectInfo":"","popup.error":"","popup.error.message":"","presence.lookingForAnime":"","tabPriority.prioritized":"","popup.options.tabPriority":"","tab.updated.changed0":"","tab.updated.changed1":"","tab.updated.changed2":"","tab.updated.added0":"","tab.updated.changed3":"","tab.updated.changed4":"","tab.updated.added1":"","tab.updated.added2":"","tab.updated.changed5":"","tab.updated.changed6":""}
