--- a/Extension/languages/no.json
+++ b/Extension/languages/no.json
@@ -1,51 +1,1 @@
-{
-    "tab.installed.heading": "Takk for at du installerte PreMiD",
-    "tab.installed.subHeading.didInstallQuestion": "Har du installert applikasjonen enda?",
-    "tab.installed.subHeading.notInstalled": "Ikke? Følg disse trinnene:",
-    "tab.installed.instructions.download": "Last ned den nyeste versjonen fra $1",
-    "tab.installed.instructions.github": "mitt GitHub repository",
-    "tab.installed.instructions.wait": "Åpne installasjonsprogrammet og vent til den er ferdig med å installere",
-    "tab.installed.instructions.warnings": "Det kan hende at du får en advarsel fra Brannmuren eller SmartScreen (Det er ikke et virus, jeg lover!)",
-    "tab.installed.instructions.autostart": "Applikasjonen bør starte automatisk, du kan sjekke om den har gjort dette ved å sjekke...",
-    "tab.installed.subHeading.ready": "Ja? Da er du klar til å bruke PreMiD",
-    "tab.installed.intro": "Start ved å bruke en av våre støttede tjenester og nyt kulhetsfølelsen",
-    "tab.updated.heading": "PreMiD har blitt oppdatert",
-    "tab.updated.subHeading.whatsNew": "Hva er nytt?",
-    "tab.updated.subHeading.whatChanged": "Hva har endret seg?",
-    "presence.playback.playing": "Spiller av",
-    "presence.playback.paused": "Avspilling pauset",
-    "popup.tabs.options": "Alternativer",
-    "popup.tabs.credits": "Bidragsytere",
-    "popup.options.headings.general": "Generelt",
-    "popup.options.headings.presences": "Presences",
-    "popup.options.enabled": "Aktivert",
-    "popup.options.titleMenubar": "Tittel Menylinje",
-    "popup.options.mediaControls": "Mediakontroll",
-    "popup.options.checkForUpdates": "Sjekk etter oppdatering",
-    "popup.options.darkTheme": "Mørkt Tema",
-    "popup.options.systemStartup": "Start ved S",
-    "presence.episode": "Episode",
-    "presence.browsing": "Surfer på...",
-    "presence.watching": "ser på",
-    "tab.installed.letsStart": "La oss komme igang",
-    "tab.installed.getSupport": "Få Hjelp",
-    "tab.installed.likeThisProject": "Liker du prosjektet? Gi det en stjerne på $1",
-    "tab.updated.gotIt": "Ok",
-    "extension.description": "PreMiD gir deg Discord Rich Presence integrasjon, Mediakontroller og mye mer for Youtube/Youtube Music, Twitch osv...",
-    "popup.options.connectInfo": "Tilkoblingsinformasjon",
-    "popup.error": "Feil",
-    "popup.error.message": "Kunne ikke laste inn listen over bidragsytere",
-    "presence.lookingForAnime": "Leter etter Anime",
-    "tabPriority.prioritized": "Fane prioritert",
-    "popup.options.tabPriority": "",
-    "tab.updated.changed0": "",
-    "tab.updated.changed1": "",
-    "tab.updated.changed2": "",
-    "tab.updated.added0": "",
-    "tab.updated.changed3": "",
-    "tab.updated.changed4": "",
-    "tab.updated.added1": "",
-    "tab.updated.added2": "",
-    "tab.updated.changed5": "",
-    "tab.updated.changed6": ""
-}
+{"tab.installed.heading":"Takk for at du installerte PreMiD","tab.installed.subHeading.didInstallQuestion":"Har du installert applikasjonen enda?","tab.installed.subHeading.notInstalled":"Ikke? Følg disse trinnene:","tab.installed.instructions.download":"Last ned den nyeste versjonen fra $1","tab.installed.instructions.github":"mitt GitHub repository","tab.installed.instructions.wait":"Åpne installasjonsprogrammet og vent til den er ferdig med å installere","tab.installed.instructions.warnings":"Det kan hende at du får en advarsel fra Brannmuren eller SmartScreen (Det er ikke et virus, jeg lover!)","tab.installed.instructions.autostart":"Applikasjonen bør starte automatisk, du kan sjekke om den har gjort dette ved å sjekke...","tab.installed.subHeading.ready":"Ja? Da er du klar til å bruke PreMiD","tab.installed.intro":"Start ved å bruke en av våre støttede tjenester og nyt kulhetsfølelsen","tab.updated.heading":"PreMiD har blitt oppdatert","tab.updated.subHeading.whatsNew":"Hva er nytt?","tab.updated.subHeading.whatChanged":"Hva har endret seg?","presence.playback.playing":"Spiller av","presence.playback.paused":"Avspilling pauset","popup.tabs.options":"Alternativer","popup.tabs.credits":"Bidragsytere","popup.options.headings.general":"Generelt","popup.options.headings.presences":"Presences","popup.options.enabled":"Aktivert","popup.options.titleMenubar":"Tittel Menylinje","popup.options.mediaControls":"Mediakontroll","popup.options.checkForUpdates":"Sjekk etter oppdatering","popup.options.darkTheme":"Mørkt Tema","popup.options.systemStartup":"Start ved S","presence.episode":"Episode","presence.browsing":"Surfer på...","presence.watching":"ser på","tab.installed.letsStart":"La oss komme igang","tab.installed.getSupport":"Få Hjelp","tab.installed.likeThisProject":"Liker du prosjektet? Gi det en stjerne på {{github_link}}","tab.updated.gotIt":"Ok","extension.description":"PreMiD gir deg Discord Rich Presence integrasjon, Mediakontroller og mye mer for Youtube/Youtube Music, Twitch osv...","popup.options.connectInfo":"Tilkoblingsinformasjon","popup.error":"Feil","popup.error.message":"Kunne ikke laste inn listen over bidragsytere","presence.lookingForAnime":"Leter etter Anime","tabPriority.prioritized":"Fane prioritert","popup.options.tabPriority":"Faneprioriteringsinfo","tab.updated.changed0":"Komplett omskriving av utvidelsen","tab.updated.changed1":"Faneprioritering fungerer nå sånn som det burde ha gjort hele tiden","tab.updated.changed2":"Fjernet feil","tab.updated.added0":"Støtte for Crunchyroll","tab.updated.changed3":"Netflix viser nå Ser på \"Filmnavn\" når man ser på filmer","tab.updated.changed4":"Mediekontrollknapper fikset","tab.updated.added1":"Støtte for Aniflix","tab.updated.added2":"Skru av/på faneprioritering","tab.updated.changed5":"Endret oversetningssystemet","tab.updated.changed6":"Fikset problem hvor bidragsytervinduet viste feilmelding på engelsk"}
