--- a/Extension/languages/pt_BR.json
+++ b/Extension/languages/pt_BR.json
@@ -1,51 +1,1 @@
-{
-    "tab.installed.heading": "Obrigado por instalar o PreMiD",
-    "tab.installed.subHeading.didInstallQuestion": "Você já instalou o aplicativo?",
-    "tab.installed.subHeading.notInstalled": "Não? Siga estás etapas:",
-    "tab.installed.instructions.download": "Baixe a ultima versão de {{github_link}}",
-    "tab.installed.instructions.github": "meu repositório no GitHub",
-    "tab.installed.instructions.wait": "Abra o instalador e aguarde até que ele seja instalado",
-    "tab.installed.instructions.warnings": "Você provavelmente pode receber um aviso do FireWall e/ou SmartScreen (não é um vírus eu prometo!)",
-    "tab.installed.instructions.autostart": "A aplicação pode iniciar automaticamente, você pode checar isso na sua TaskBar (Windows) ou na sua Menubar (MacOS)",
-    "tab.installed.subHeading.ready": "Sim? Você está pronto pra começar!",
-    "tab.installed.intro": "Comece usando um dos nossos serviços suportados e aproveite o gosto de ser maneiro!",
-    "tab.updated.heading": "PreMiD foi atualizado!",
-    "tab.updated.subHeading.whatsNew": "O que há de novo?",
-    "tab.updated.subHeading.whatChanged": "O que mudou?",
-    "presence.playback.playing": "Tocando",
-    "presence.playback.paused": "Pausado",
-    "popup.tabs.options": "Opções",
-    "popup.tabs.credits": "Créditos",
-    "popup.options.headings.general": "Geral",
-    "popup.options.headings.presences": "Presenças",
-    "popup.options.enabled": "Ativado",
-    "popup.options.titleMenubar": "Título Menubar",
-    "popup.options.mediaControls": "Controles de Mídia",
-    "popup.options.checkForUpdates": "Checar por atualizações",
-    "popup.options.darkTheme": "Modo escuro",
-    "popup.options.systemStartup": "Iniciar com o Sistema",
-    "presence.episode": "Episódio {{episode}}",
-    "presence.browsing": "Procurando...",
-    "presence.watching": "Assistindo",
-    "tab.installed.letsStart": "Vamos começar!",
-    "tab.installed.getSupport": "Receba Suporte",
-    "tab.installed.likeThisProject": "Gostou desse projeto? De uma estrela no $1!",
-    "tab.updated.gotIt": "Consegui!",
-    "extension.description": "PreMiD adiciona Integração do Discord Rich Presence, Controles de Mídia e muito mais para o Youtube/Youtube Music, Twitch etc...",
-    "popup.options.connectInfo": "Informação da Conexão",
-    "popup.error": "Erro",
-    "popup.error.message": "Não foi possível carregar os créditos",
-    "presence.lookingForAnime": "Procurando pelo Anime...",
-    "tabPriority.prioritized": "Aba priorizada",
-    "popup.options.tabPriority": "",
-    "tab.updated.changed0": "",
-    "tab.updated.changed1": "",
-    "tab.updated.changed2": "",
-    "tab.updated.added0": "",
-    "tab.updated.changed3": "",
-    "tab.updated.changed4": "",
-    "tab.updated.added1": "",
-    "tab.updated.added2": "",
-    "tab.updated.changed5": "",
-    "tab.updated.changed6": ""
-}
+{"tab.installed.heading":"Obrigado por instalar o PreMiD","tab.installed.subHeading.didInstallQuestion":"Você já instalou o aplicativo?","tab.installed.subHeading.notInstalled":"Não? Siga estás etapas:","tab.installed.instructions.download":"Baixe a ultima versão de {{github_link}}","tab.installed.instructions.github":"meu repositório no GitHub","tab.installed.instructions.wait":"Abra o instalador e aguarde até que ele seja instalado","tab.installed.instructions.warnings":"Você provavelmente pode receber um aviso do FireWall e/ou SmartScreen (não é um vírus eu prometo!)","tab.installed.instructions.autostart":"A aplicação pode iniciar automaticamente, você pode checar isso na sua TaskBar (Windows) ou na sua Menubar (MacOS)","tab.installed.subHeading.ready":"Sim? Você está pronto pra começar!","tab.installed.intro":"Comece usando um dos nossos serviços suportados e aproveite o gosto de ser maneiro!","tab.updated.heading":"PreMiD foi atualizado!","tab.updated.subHeading.whatsNew":"O que há de novo?","tab.updated.subHeading.whatChanged":"O que mudou?","presence.playback.playing":"Tocando","presence.playback.paused":"Pausado","popup.tabs.options":"Opções","popup.tabs.credits":"Créditos","popup.options.headings.general":"Geral","popup.options.headings.presences":"Presenças","popup.options.enabled":"Ativado","popup.options.titleMenubar":"Título Menubar","popup.options.mediaControls":"Controles de Mídia","popup.options.checkForUpdates":"Checar por atualizações","popup.options.darkTheme":"Modo escuro","popup.options.systemStartup":"Iniciar com o Sistema","presence.episode":"Episódio {{episode}}","presence.browsing":"Procurando...","presence.watching":"Assistindo","tab.installed.letsStart":"Vamos começar!","tab.installed.getSupport":"Receba Suporte","tab.installed.likeThisProject":"Gostou desse projeto? De uma estrela no {{github_link}}!","tab.updated.gotIt":"Consegui!","extension.description":"PreMiD adiciona Integração do Discord Rich Presence, Controles de Mídia e muito mais para o Youtube/Youtube Music, Twitch etc...","popup.options.connectInfo":"Informação da Conexão","popup.error":"Erro","popup.error.message":"Não foi possível carregar os créditos","presence.lookingForAnime":"Procurando pelo Anime...","tabPriority.prioritized":"Aba priorizada","popup.options.tabPriority":"Informações da Prioridade de Aba","tab.updated.changed0":"Reescrita completa da extensão","tab.updated.changed1":"Prioridade de Aba agora funciona como deveria ter sido o tempo todo","tab.updated.changed2":"Matou bugs desagradáveis","tab.updated.added0":"Suporte ao Crunchyroll","tab.updated.changed3":"Netflix agora mostra assistindo \"Movie Name\" ao assistir filmes","tab.updated.changed4":"Teclas do controle de mídia corrigidos","tab.updated.added1":"Suporte ao Aniflix","tab.updated.added2":"Alterar Prioridade de Aba","tab.updated.changed5":"Revisão do sistema de tradução","tab.updated.changed6":"Corrigido os créditos mostrando apenas mensagem de erro em inglês"}
