--- a/Extension/languages/pt_PT.json
+++ b/Extension/languages/pt_PT.json
@@ -1,40 +1,1 @@
-{
-    "tab.installed.heading": "Obrigado por instalares PreMiD",
-    "tab.installed.subHeading.didInstallQuestion": "Já instalas-te a aplicação?",
-    "tab.installed.subHeading.notInstalled": "Não? Segue estes passos:",
-    "tab.installed.instructions.download": "Baixa a ultima versão apartir de $1",
-    "tab.installed.instructions.github": "o meu repositorio do GitHub",
-    "tab.installed.instructions.wait": "Abre o instalador e espera ",
-    "tab.installed.instructions.warnings": "Tu podes receber um aviso do FireWall ou SmartScreen ( Não é um vírus eu prometo! )",
-    "tab.installed.instructions.autostart": "O aplicativo deve iniciar automaticamente, tu podes verificar isso olhando para a tua barra de tarefas (Windows) ou da tua barra de menu (MacOS)",
-    "tab.installed.subHeading.ready": "Sim? Então estas pronto para ir!",
-    "tab.installed.intro": "Começa a usar um dos nossos serviços suportados e aproveita o doce sabor da frieza!",
-    "tab.updated.heading": "PreMiD foi atualizado!",
-    "tab.updated.subHeading.whatsNew": "O que há de novo?",
-    "tab.updated.subHeading.whatChanged": "O que mudou?",
-    "presence.playback.playing": "A tocar",
-    "presence.playback.paused": "Em pausa",
-    "popup.tabs.options": "Opções",
-    "popup.tabs.credits": "Créditos",
-    "popup.options.headings.general": "General",
-    "popup.options.headings.presences": "Presenças",
-    "popup.options.enabled": "Ativado",
-    "popup.options.titleMenubar": "Título Menubar",
-    "popup.options.mediaControls": "Controles de Mídia",
-    "popup.options.checkForUpdates": "Verificar por atualizações",
-    "popup.options.darkTheme": "Tema escuro",
-    "popup.options.systemStartup": "Inicializar com o sistema",
-    "presence.episode": "Episódio",
-    "presence.browsing": "A pesquisar...",
-    "presence.watching": "a vêr",
-    "tab.installed.letsStart": "Vamos Começar!",
-    "tab.installed.getSupport": "Receba suporte",
-    "tab.installed.likeThisProject": "Gostas deste projeto? Apoia com $1!",
-    "tab.updated.gotIt": "Consegui!",
-    "extension.description": "O PreMiD adiciona uma integração com o Discord Rich Presence, Controles de Mídia e muito mais para YouTube/YouTube Music, Twitch etc..",
-    "popup.options.connectInfo": "Informação de Conexão",
-    "popup.error": "Erro",
-    "popup.error.message": "Não possível carregar os créditos",
-    "presence.lookingForAnime": "A Procurar Animes...",
-    "tabPriority.prioritized": "Tab priorizada"
-}
+{"tab.installed.heading":"Obrigado por instalares PreMiD","tab.installed.subHeading.didInstallQuestion":"Já instalas-te a aplicação?","tab.installed.subHeading.notInstalled":"Não? Segue estes passos:","tab.installed.instructions.download":"Baixa a ultima versão apartir de $1","tab.installed.instructions.github":"o meu repositorio do GitHub","tab.installed.instructions.wait":"Abre o instalador e espera","tab.installed.instructions.warnings":"Tu podes receber um aviso do FireWall ou SmartScreen ( Não é um vírus eu prometo! )","tab.installed.instructions.autostart":"O aplicativo deve iniciar automaticamente, tu podes verificar isso olhando para a tua barra de tarefas (Windows) ou da tua barra de menu (MacOS)","tab.installed.subHeading.ready":"Sim? Então estas pronto para ir!","tab.installed.intro":"Começa a usar um dos nossos serviços suportados e aproveita o doce sabor da frieza!","tab.updated.heading":"PreMiD foi atualizado!","tab.updated.subHeading.whatsNew":"O que há de novo?","tab.updated.subHeading.whatChanged":"O que mudou?","presence.playback.playing":"A tocar","presence.playback.paused":"Em pausa","popup.tabs.options":"Opções","popup.tabs.credits":"Créditos","popup.options.headings.general":"General","popup.options.headings.presences":"Presenças","popup.options.enabled":"Ativado","popup.options.titleMenubar":"Título Menubar","popup.options.mediaControls":"Controles de Mídia","popup.options.checkForUpdates":"Verificar por atualizações","popup.options.darkTheme":"Tema escuro","popup.options.systemStartup":"Inicializar com o sistema","presence.episode":"Episódio","presence.browsing":"A pesquisar...","presence.watching":"a vêr","tab.installed.letsStart":"Vamos Começar!","tab.installed.getSupport":"Receba suporte","tab.installed.likeThisProject":"Gostas deste projeto? Apoia com {{github_link}}!","tab.updated.gotIt":"Consegui!","extension.description":"O PreMiD adiciona uma integração com o Discord Rich Presence, Controles de Mídia e muito mais para YouTube/YouTube Music, Twitch etc..","popup.options.connectInfo":"Informação de Conexão","popup.error":"Erro","popup.error.message":"Não possível carregar os créditos","presence.lookingForAnime":"A Procurar Animes...","tabPriority.prioritized":"Tab priorizada","popup.options.tabPriority":"Tabela Informações prioritárias","tab.updated.changed0":"Reescrita completa da extensão","tab.updated.changed1":"Tab Priority agora funciona como deveria ter funcionado o tempo todo","tab.updated.changed2":"Bugs desagradáveis corrigidos","tab.updated.added0":"Crunchyroll Supporte","tab.updated.changed3":"A Netflix agora mostra assistindo \"Nome do Filme\" ao assistir filmes","tab.updated.changed4":"Teclas de controle de mídia fixas","tab.updated.added1":"Aniflix Supporte","tab.updated.added2":"Alternância da Tab Priority","tab.updated.changed5":"Revisão do sistema de tradução","tab.updated.changed6":"Créditos corrigidos a mostrar erros em Inglês"}
