--- a/Extension/_locales/en/messages.json
+++ b/Extension/_locales/en/messages.json
@@ -1,5 +1,1 @@
-{
-  "description": {
-    "message": "PreMiD adds Discord Rich Presence integration, Media controls and much more to YouTube/YouTube Music, Twitch etc..."
-  }
-}
+{"description":{"message":"PreMiD adds Discord Rich Presence integration, Media controls and much more to YouTube/YouTube Music, Twitch etc..."}}
