--- a/Extension/_locales/he/messages.json
+++ b/Extension/_locales/he/messages.json
@@ -1,5 +1,2 @@
-{
-  "description": {
-    "message": "PreMiD מוסיפה אינטגרציית Discord Rich Presence, הגדרות מדיה ועוד הרבה לYouTube/YouTube Music, Twitch ועוד.."
-  }
-}
+{"description":{"message":"PreMiD מוסיפה אינטגרציית Discord Rich Presence, הגדרות מדיה ועוד הרבה לYouTube/YouTube Music, Twitch ועוד..
+"}}
