--- a/Extension/_locales/nl/messages.json
+++ b/Extension/_locales/nl/messages.json
@@ -1,5 +1,1 @@
-{
-  "description": {
-    "message": "PreMiD voegt Discord Rich Presence-integratie, mediabediening en nog veel meer toe aan YouTube / YouTube Music, Twitch enz."
-  }
-}
+{"description":{"message":"PreMiD voegt Discord Rich Presence-integratie, mediabediening en nog veel meer toe aan YouTube / YouTube Music, Twitch enz."}}
