--- a/Extension/languages/ar.json
+++ b/Extension/languages/ar.json
@@ -1,51 +1,1 @@
-{
-    "tab.installed.heading": "shukraan lak ealaa tathbit PreMiD\n",
-    "tab.installed.subHeading.didInstallQuestion": "",
-    "tab.installed.subHeading.notInstalled": "",
-    "tab.installed.instructions.download": "",
-    "tab.installed.instructions.github": "",
-    "tab.installed.instructions.wait": "",
-    "tab.installed.instructions.warnings": "",
-    "tab.installed.instructions.autostart": "",
-    "tab.installed.subHeading.ready": "",
-    "tab.installed.intro": "",
-    "tab.updated.heading": "",
-    "tab.updated.subHeading.whatsNew": "",
-    "tab.updated.subHeading.whatChanged": "",
-    "presence.playback.playing": "",
-    "presence.playback.paused": "",
-    "popup.tabs.options": "",
-    "popup.tabs.credits": "",
-    "popup.options.headings.general": "",
-    "popup.options.headings.presences": "",
-    "popup.options.enabled": "",
-    "popup.options.titleMenubar": "",
-    "popup.options.mediaControls": "",
-    "popup.options.checkForUpdates": "",
-    "popup.options.darkTheme": "",
-    "popup.options.systemStartup": "",
-    "presence.episode": "",
-    "presence.browsing": "",
-    "presence.watching": "",
-    "tab.installed.letsStart": "",
-    "tab.installed.getSupport": "",
-    "tab.installed.likeThisProject": "",
-    "tab.updated.gotIt": "",
-    "extension.description": "",
-    "popup.options.connectInfo": "",
-    "popup.error": "",
-    "popup.error.message": "",
-    "presence.lookingForAnime": "",
-    "tabPriority.prioritized": "",
-    "popup.options.tabPriority": "",
-    "tab.updated.changed0": "",
-    "tab.updated.changed1": "",
-    "tab.updated.changed2": "",
-    "tab.updated.added0": "",
-    "tab.updated.changed3": "",
-    "tab.updated.changed4": "",
-    "tab.updated.added1": "",
-    "tab.updated.added2": "",
-    "tab.updated.changed5": "",
-    "tab.updated.changed6": ""
-}
+{"tab.installed.heading":"شكرا لك لتنزيل PreMiD\n","tab.installed.subHeading.didInstallQuestion":"هل قمت بتنزيل التطبيق بعد؟","tab.installed.subHeading.notInstalled":"لا؟ تابع الخطوات التالية","tab.installed.instructions.download":"قم بتنزيل النسخة الاجدد من {{github_link}}","tab.installed.instructions.github":"مستودع GitHub الخاص بي","tab.installed.instructions.wait":"افتح المثبت وانتظر حتى يتم التثبيت","tab.installed.instructions.warnings":"","tab.installed.instructions.autostart":"","tab.installed.subHeading.ready":"","tab.installed.intro":"","tab.updated.heading":"","tab.updated.subHeading.whatsNew":"","tab.updated.subHeading.whatChanged":"","presence.playback.playing":"","presence.playback.paused":"","popup.tabs.options":"الاعدادات","popup.tabs.credits":"","popup.options.headings.general":"","popup.options.headings.presences":"","popup.options.enabled":"","popup.options.titleMenubar":"","popup.options.mediaControls":"","popup.options.checkForUpdates":"","popup.options.darkTheme":"","popup.options.systemStartup":"","presence.episode":"","presence.browsing":"","presence.watching":"","tab.installed.letsStart":"","tab.installed.getSupport":"","tab.installed.likeThisProject":"","tab.updated.gotIt":"","extension.description":"","popup.options.connectInfo":"","popup.error":"","popup.error.message":"","presence.lookingForAnime":"","tabPriority.prioritized":"","popup.options.tabPriority":"","tab.updated.changed0":"","tab.updated.changed1":"","tab.updated.changed2":"","tab.updated.added0":"","tab.updated.changed3":"","tab.updated.changed4":"","tab.updated.added1":"","tab.updated.added2":"","tab.updated.changed5":"","tab.updated.changed6":""}
