--- a/Extension/languages/es.json
+++ b/Extension/languages/es.json
@@ -1,40 +1,1 @@
-{
-    "tab.installed.heading": "Gracias por instalar PreMID",
-    "tab.installed.subHeading.didInstallQuestion": "Ya has instalado esta aplicación?",
-    "tab.installed.subHeading.notInstalled": "No? Sigue estos pasos.",
-    "tab.installed.instructions.download": "Descarga la versión mas nueva de",
-    "tab.installed.instructions.github": "Mi repositorio de GitHub",
-    "tab.installed.instructions.wait": "Abrir el instalador y esperar hasta que se instale",
-    "tab.installed.instructions.warnings": "Tu puedes recibir una alerta sobre FireWall y SmartScreen (No es un virus lo prometo)",
-    "tab.installed.instructions.autostart": "La aplicación debería iniciarse automáticamente, Tu puedes checar esto en la Taskbar (Windows) o tu menubar (MacOS)",
-    "tab.installed.subHeading.ready": "Listo? Estas listo para andar!",
-    "tab.installed.intro": "Empieza por usar unos de nuestros servicios soportados y disfruta el dulce sabor de tener estilo!",
-    "tab.updated.heading": "PreMID ha sido actualizado!",
-    "tab.updated.subHeading.whatsNew": "¿Que es nuevo?",
-    "tab.updated.subHeading.whatChanged": "¿Que cambió?",
-    "presence.playback.playing": "Reproducir",
-    "presence.playback.paused": "Reproducción pausada",
-    "popup.tabs.options": "Opciones",
-    "popup.tabs.credits": "Creditos",
-    "popup.options.headings.general": "General",
-    "popup.options.headings.presences": "Presencias",
-    "popup.options.enabled": "Habilitado",
-    "popup.options.titleMenubar": "Titulo de Barra de menú",
-    "popup.options.mediaControls": "Controles Multimedia",
-    "popup.options.checkForUpdates": "Ver si hay actualizaciones",
-    "popup.options.darkTheme": "Tema Oscuro",
-    "popup.options.systemStartup": "Inicio del Sistema",
-    "presence.episode": "Episodio",
-    "presence.browsing": "Navegando...",
-    "presence.watching": "Viendo",
-    "tab.installed.letsStart": "Empecemos!",
-    "tab.installed.getSupport": "Obtén soporte",
-    "tab.installed.likeThisProject": "Te gusta este proyecto? Sopórtalo por $1",
-    "tab.updated.gotIt": "Entendido!",
-    "extension.description": "PreMID agrega integración de Presencia rica de discord, Controles Multimedia y mucho mas a Youtube/Youtube Music, Twitch etc...",
-    "popup.options.connectInfo": "Información de la conexión",
-    "popup.error": "Error",
-    "popup.error.message": "No se pudieron cargar los creditos",
-    "presence.lookingForAnime": "Buscando por Anime...",
-    "tabPriority.prioritized": "Pestaña priorizada"
-}
+{"tab.installed.heading":"Gracias por instalar PreMiD","tab.installed.subHeading.didInstallQuestion":"¿Ya has instalado la aplicación?","tab.installed.subHeading.notInstalled":"¿No? Sigue estos pasos:","tab.installed.instructions.download":"Descarga la versión mas reciente de {{github_link}}","tab.installed.instructions.github":"mi repositorio de GitHub","tab.installed.instructions.wait":"Abre el instalador y espera hasta que se instale","tab.installed.instructions.warnings":"Puede que recibas una alerta del FireWall o de SmartScreen (¡No es un virus lo prometo!)","tab.installed.instructions.autostart":"La aplicación debería iniciarse automáticamente, puedes comprobarlo en el Administrador de Tareas (Windows) o tu Monitor de Actividad(MacOS)","tab.installed.subHeading.ready":"¿Si? ¡Está todo listo!","tab.installed.intro":"¡Empieza usando uno de nuestros servicios soportados y disfruta del dulce sabor de tener estilo!","tab.updated.heading":"¡PreMiD ha sido actualizado!","tab.updated.subHeading.whatsNew":"¿Que novedades hay?","tab.updated.subHeading.whatChanged":"¿Que ha cambiado?","presence.playback.playing":"Reproduciendo","presence.playback.paused":"Reproducción pausada","popup.tabs.options":"Opciones","popup.tabs.credits":"Créditos","popup.options.headings.general":"General","popup.options.headings.presences":"Presencias","popup.options.enabled":"Habilitado","popup.options.titleMenubar":"Titulo de Barra de menú","popup.options.mediaControls":"Controles Multimedia","popup.options.checkForUpdates":"Comprobar actualizaciones","popup.options.darkTheme":"Tema Oscuro","popup.options.systemStartup":"Iniciar con el Sistema","presence.episode":"Episodio {{episode}}","presence.browsing":"Navegando...","presence.watching":"Viendo","tab.installed.letsStart":"¡Empecemos!","tab.installed.getSupport":"Necesito Ayuda","tab.installed.likeThisProject":"¿Te gusta este proyecto? ¡Dale una estrella en {{github_link}}!","tab.updated.gotIt":"¡Entendido!","extension.description":"PreMiD agrega integración de Presencia rica de discord, Controles Multimedia y mucho mas a Youtube/Youtube Music, Twitch etc...","popup.options.connectInfo":"Información de la conexión","popup.error":"Error","popup.error.message":"No se pudieron cargar los créditos","presence.lookingForAnime":"Buscando por Anime...","tabPriority.prioritized":"Pestaña priorizada","popup.options.tabPriority":"Información sobre la Pestaña Priorizada","tab.updated.changed0":"Extensión reescrita completamente","tab.updated.changed1":"La Pestaña de Prioridad ahora funciona como siempre debió hacerlo","tab.updated.changed2":"Arreglados algunos bugs","tab.updated.added0":"Soporte para Crunchyroll","tab.updated.changed3":"Netflix ahora muestra Viendo \"Nombre de la película\" cuando ves películas","tab.updated.changed4":"Teclas de Control Multimedia arregladas","tab.updated.added1":"Soporte para Aniflix","tab.updated.added2":"Interruptor de la Pestaña de Prioridad","tab.updated.changed5":"Revisión del sistema de traducción","tab.updated.changed6":"Solucionado error que muestra en los créditos un mensaje de error en Inglés"}
