--- a/Extension/languages/nl.json
+++ b/Extension/languages/nl.json
@@ -1,38 +1,1 @@
-{
-    "tab.installed.heading": "Bedankt voor het installeren van PreMiD",
-    "tab.installed.subHeading.didInstallQuestion": "Heb je de applicatie al geïnstalleerd?",
-    "tab.installed.subHeading.notInstalled": "Zo niet? Volg deze stappen:",
-    "tab.installed.instructions.download": "Download de nieuwste versie vanaf $1",
-    "tab.installed.instructions.github": "mijn repository",
-    "tab.installed.instructions.wait": "Open het installatieprogramma en wacht totdat het is geïnstalleerd",
-    "tab.installed.instructions.warnings": "U ontvangt mogelijk een waarschuwing over FireWall en SmartScreen (het is geen virus dat beloof ik)",
-    "tab.installed.instructions.autostart": "De applicatie zou automatisch moeten starten, u kunt dit controleren door te kijken naar uw taakbalk (Windows) of uw menubalk (MacOS)",
-    "tab.installed.subHeading.ready": "Ja? Je bent klaar om te beginnen!",
-    "tab.installed.intro": "Begin met het bekijken van een video op YouTube, het bekijken van je favoriete streamers op Twitch, Bekijk je favoriete animaties op KissAnime of JKAnime, misschien zelfs Netflix ... Wie weet?<br>Of je luistert gewoon naar je favoriete nummers op SoundCloud en YouTube Music. Instellingen kunnen worden gevonden door op het pictogram PreMiD in uw browser te klikken.",
-    "tab.updated.heading": "PreMiD is bijgewerkt!",
-    "tab.updated.subHeading.whatsNew": "Wat is er nieuw?",
-    "tab.updated.subHeading.whatChanged": "Wat is er veranderd?",
-    "presence.playback.playing": "Afspelen",
-    "presence.playback.paused": "Afspelen gepauzeerd",
-    "popup.tabs.options": "Opties",
-    "popup.tabs.credits": "Credits",
-    "popup.options.headings.general": "Algemeen",
-    "popup.options.headings.presences": "Presences",
-    "popup.options.enabled": "Ingeschakeld",
-    "popup.options.titleMenubar": "Titel Menubar",
-    "popup.options.mediaControls": "Mediabediening",
-    "popup.options.checkForUpdates": "Controleer op updates",
-    "popup.options.darkTheme": "Donker Thema",
-    "popup.options.systemStartup": "Sys",
-    "presence.episode": "Aflevering",
-    "presence.browsing": "Browsen...",
-    "presence.watching": "Aan het kijken",
-    "tab.installed.letsStart": "Laten we beginnen!",
-    "tab.installed.getSupport": "Krijg ondersteuning",
-    "tab.installed.likeThisProject": "Vind je dit project leuk? Ster het op $1!",
-    "tab.updated.gotIt": "Begrepen!",
-    "extension.description": "PreMiD voegt Discord Rich Presence-integratie, mediabediening en nog veel meer toe aan YouTube / YouTube Music, Twitch enz.",
-    "popup.options.connectInfo": "Verbindingsinformatie",
-    "popup.error": "Foutmelding",
-    "popup.error.message": "Kan credits niet laden"
-}
+{"tab.installed.heading":"Bedankt voor het installeren van PreMiD","tab.installed.subHeading.didInstallQuestion":"Heb je de applicatie al geïnstalleerd?","tab.installed.subHeading.notInstalled":"Zo niet? Volg deze stappen:","tab.installed.instructions.download":"Download de nieuwste versie vanaf $1","tab.installed.instructions.github":"mijn repository","tab.installed.instructions.wait":"Open het installatieprogramma en wacht totdat het is geïnstalleerd","tab.installed.instructions.warnings":"U ontvangt mogelijk een waarschuwing over FireWall en SmartScreen (het is geen virus dat beloof ik)","tab.installed.instructions.autostart":"De applicatie zou automatisch moeten starten, u kunt dit controleren door te kijken naar uw taakbalk (Windows) of uw menubalk (MacOS)","tab.installed.subHeading.ready":"Ja? Je bent klaar om te beginnen!","tab.installed.intro":"Begin met het bekijken van een video op YouTube, het bekijken van je favoriete streamers op Twitch, Bekijk je favoriete animaties op KissAnime of JKAnime, misschien zelfs Netflix ... Wie weet?<br>Of je luistert gewoon naar je favoriete nummers op SoundCloud en YouTube Music. Instellingen kunnen worden gevonden door op het pictogram PreMiD in uw browser te klikken.","tab.updated.heading":"PreMiD is bijgewerkt!","tab.updated.subHeading.whatsNew":"Wat is er nieuw?","tab.updated.subHeading.whatChanged":"Wat is er veranderd?","presence.playback.playing":"Afspelen","presence.playback.paused":"Afspelen gepauzeerd","popup.tabs.options":"Opties","popup.tabs.credits":"Credits","popup.options.headings.general":"Algemeen","popup.options.headings.presences":"Presences","popup.options.enabled":"Ingeschakeld","popup.options.titleMenubar":"Titel Menubar","popup.options.mediaControls":"Mediabediening","popup.options.checkForUpdates":"Controleer op updates","popup.options.darkTheme":"Donker Thema","popup.options.systemStartup":"Sys","presence.episode":"Aflevering","presence.browsing":"Browsen...","presence.watching":"Aan het kijken","tab.installed.letsStart":"Laten we beginnen!","tab.installed.getSupport":"Krijg ondersteuning","tab.installed.likeThisProject":"Vind je dit project leuk? Ster het op {{github_link}}!","tab.updated.gotIt":"Begrepen!","extension.description":"PreMiD voegt Discord Rich Presence-integratie, mediabediening en nog veel meer toe aan YouTube / YouTube Music, Twitch enz.","popup.options.connectInfo":"Verbindingsinformatie","popup.error":"Foutmelding","popup.error.message":"Kan credits niet laden","presence.lookingForAnime":"","tabPriority.prioritized":"","popup.options.tabPriority":"","tab.updated.changed0":"","tab.updated.changed1":"","tab.updated.changed2":"","tab.updated.added0":"","tab.updated.changed3":"","tab.updated.changed4":"","tab.updated.added1":"","tab.updated.added2":"","tab.updated.changed5":"","tab.updated.changed6":""}
