--- a/Extension/_locales/sv/messages.json
+++ b/Extension/_locales/sv/messages.json
@@ -1,2 +1,5 @@
-{"description":{"message":"PreMiD lägger till Discord Rich Presence integration, Media kontroller och mycket mer till YouTube / YouTube Music, Twitch osv...
-"}}
+{
+  "description": {
+    "message": "PreMiD lägger till Discord Rich Presence integration, Media kontroller och mycket mer till YouTube / YouTube Music, Twitch osv..."
+  }
+}
