--- a/Extension/_locales/de/messages.json
+++ b/Extension/_locales/de/messages.json
@@ -1,1 +1,5 @@
-{"description":{"message":"PreMiD fügt Discord-Rich-Presence-Integration, Medienkontrolle und vieles mehr zu YouTube/YouTube Music, Twitch etc. hinzu..."}}
+{
+	"description": {
+		"message": "PreMiD adds Discord Rich Presence support to a lot of services you use and love. It also gives the possibility to use your media keys to control the playback of those services."
+	}
+}
