--- a/Extension/_locales/nl/messages.json
+++ b/Extension/_locales/nl/messages.json
@@ -1,1 +1,5 @@
-{"description":{"message":"PreMiD voegt Discord Rich Presence-integratie, mediabediening en nog veel meer toe aan YouTube / YouTube Music, Twitch enz."}}
+{
+	"description": {
+		"message": "PreMiD adds Discord Rich Presence support to a lot of services you use and love. It also gives the possibility to use your media keys to control the playback of those services."
+	}
+}
