--- a/Extension/_locales/pt_BR/messages.json
+++ b/Extension/_locales/pt_BR/messages.json
@@ -1,1 +1,5 @@
-{"description":{"message":"PreMiD adiciona Integração do Discord Rich Presence, Controles de Mídia e muito mais para o Youtube/Youtube Music, Twitch etc..."}}
+{
+	"description": {
+		"message": "PreMiD adiciona Integração do Discord Rich Presence, Controles de Mídia e muito mais para o Youtube/Youtube Music, Twitch etc..."
+	}
+}
