--- a/Extension/_locales/da/messages.json
+++ b/Extension/_locales/da/messages.json
@@ -1,1 +1,5 @@
-{"description":{"message":"PreMiD tilføjer Discord Rich Presence integration, mediekontrol og meget mere til YouTube/YouTube Musik, Twitch etc..."}}
+{
+	"description": {
+		"message": "PreMiD adds Discord Rich Presence support to a lot of services you use and love. It also gives the possibility to use your media keys to control the playback of those services."
+	}
+}
