--- a/Extension/_locales/en/messages.json
+++ b/Extension/_locales/en/messages.json
@@ -1,1 +1,5 @@
-{"description":{"message":"PreMiD adds Discord Rich Presence integration, Media controls and much more to YouTube/YouTube Music, Twitch etc..."}}
+{
+	"description": {
+		"message": "PreMiD adds Discord Rich Presence support to a lot of services you use and love. It also gives the possibility to use your media keys to control the playback of those services."
+	}
+}
