--- a/Extension/_locales/pt_PT/messages.json
+++ b/Extension/_locales/pt_PT/messages.json
@@ -1,1 +1,5 @@
-{"description":{"message":"O PreMiD adiciona uma integração com o Discord Rich Presence, Controles de Mídia e muito mais para YouTube/YouTube Music, Twitch etc.."}}
+{
+	"description": {
+		"message": "PreMiD adds Discord Rich Presence support to a lot of services you use and love. It also gives the possibility to use your media keys to control the playback of those services."
+	}
+}
