--- a/Extension/_locales/fr/messages.json
+++ b/Extension/_locales/fr/messages.json
@@ -1,5 +1,5 @@
 {
 	"description": {
-		"message": "PreMiD adds Discord Rich Presence support to a lot of services you use and love. It also gives the possibility to use your media keys to control the playback of those services."
+		"message": "PreMiD adds Discord Rich Presence support to a lot of services you use and love."
 	}
 }
